tests/cases/compiler-development/artifact/errors/diagnostic-match-branch-state-mismatch.diagnostic
diagnostic error code=O0001 family=ownership message="binding 'token' has incompatible ownership states after match arms" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-branch-state-mismatch.ari" display="tests/cases/match/errors/match-branch-state-mismatch.ari" bytes=175
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-branch-state-mismatch.ari" line=13 column=5 end_line=13 end_column=6 byte_start=144 byte_end=145 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-branch-state-mismatch.ari:13:5\n    |\n 13 |     B => {\n    |     ^"
  Note index=0 location=none message="ownership state must agree across every continuing control-flow path before execution continues"
  Help index=0 location=none message="make every branch move, drop, or keep 'token' consistently"
